test/test-require/result.txt
pdjs version  (v8 version 8.6.395.24)
include
include x 1
include this.x 1
include y y
include this.y undefined
o.x 4
x 2
require bar
require foo 37
error: Error compiling 'C:/Source/pdjs/test/test-require/compile_error.js':
C:/Source/pdjs/test/test-require/compile_error.js:1: SyntaxError: Unexpected end of input
(
 
SyntaxError: Unexpected end of input
    at C:/Source/pdjs/test/test-require/test.js:13:1

verbose(4): ... you might be able to track this down from the Find menu.
error: Error running 'C:/Source/pdjs/test/test-require/run_error.js':
C:/Source/pdjs/test/test-require/run_error.js:1: ReferenceError: xyz is not defined
xyz();
^
ReferenceError: xyz is not defined
    at Object.<anonymous> (C:/Source/pdjs/test/test-require/run_error.js:1:1)
    at C:/Source/pdjs/test/test-require/test.js:14:1

error: Function 'bang' does not exist.
